# fstalign

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md
.github/workflows/: CI.yml  copyright-update.yml  deploy.yml  links_fail_fast.yml
docs/: Advanced-Usage.md  NLP-Format.md  Synonyms-Format.md  Usage.md  json_log_schema.json
sample_data/: aaddf.txt  synonyms.rules.txt
sample_data/tests/: align_1.hyp.ctm  align_1.ref.aligned.nlp  align_1.ref.nlp  align_2.hyp.ctm  align_3.hyp.ctm  align_3.norm.json  align_4.ref.aligned1.nlp  align_5.ref.aligned2-a2.nlp  align_5.ref.aligned2.nlp  align_5.ref.nlp  empty.ref.txt  noise.hyp1.ctm  noise.hyp2.ctm  noise_1.hyp2.aligned  noise_1.ref.nlp  oracle_1.hyp.fst  oracle_1.ref.txt  oracle_1.symbols.txt  short.aligned.nlp  short.aligned.strict.nlp  short.hyp.txt  short.ref.nlp  speaker_1.ref.nlp  speaker_2.hyp.txt  syn_1.hyp.sbs  syn_3.hyp.txt  syn_7.hyp3.txt  syn_7.hyp4.txt  syn_7.norm.json  syn_7.ref.nlp  syn_7_ref4.nlp  twenty.hyp.txt  twenty.ref.testing.nlp
src/: AdaptedComposition.cpp  AdaptedComposition.h  AlignmentTraversor.cpp  AlignmentTraversor.h  Ctm.cpp  Ctm.h  FstFileLoader.cpp  FstFileLoader.h  FstLoader.cpp  FstLoader.h  IComposition.h  KaldiArchiveFstLoader.cpp  KaldiArchiveFstLoader.h  Nlp.cpp  Nlp.h  OneBestFstLoader.cpp  OneBestFstLoader.h  PathHeap.cpp  PathHeap.h  StandardComposition.cpp  StandardComposition.h  SynonymEngine.cpp  SynonymEngine.h  Walker.cpp  Walker.h  fast-d.cpp  fast-d.h  fstalign.cpp  fstalign.h  json_logging.h  logging.cpp  logging.h  main.cpp  utilities.cpp  utilities.h  version.h  wer.cpp  wer.h
test/: CMakeLists.txt  compose-tests-utils.h  compose-tests.cc  fast-d-tests.cc  fstalign_Test.cc  test-utilties.h
test/data/: align_1.aligned.punc_case.nlp  align_1.hyp.punc_case.ctm  align_1.norm.json  align_1.ref.aligned.nlp  align_2.norm.json  align_2.ref.aligned.nlp  align_2.ref.nlp  align_3.ref.aligned.nlp  align_3.ref.nlp  align_4.hyp1.ctm  align_4.hyp2.ctm  align_4.norm.json  align_4.ref.aligned1.nlp  align_4.ref.aligned2.nlp  align_4.ref.nlp  align_5.hyp1.ctm  align_5.hyp2.ctm  align_5.ref.aligned1-2.nlp  align_5.ref.aligned1.nlp  align_5.ref.aligned2-a2.nlp  align_5.ref.aligned2.nlp  align_6.ref.aligned.nlp  align_6.ref.nlp  empty.hyp.nlp  noise_1.hyp1.aligned  noise_1.hyp2.aligned  oracle_1.hyp.fst  short.aligned.case.nlp  short.aligned.nlp  short.aligned.punc.nlp  short.aligned.punc_case.nlp  short.aligned.strict.nlp  short.hyp.nlp  short.sbs.txt  short_punc.hyp.nlp  short_punc.ref.nlp  short_punc.wer_tag.json  speaker_1.hyp.txt  speaker_2.ref.nlp  syn_1.hyp.sbs  (+30 more)
tools/: README.md  gather_runtime_metrics.sh  generate_wer_test_data.pl
